Update lechw-11